<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/cedula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/escribe_tu_numero_de_cedula"
        android:backgroundTint="@color/purple_700"
        android:importantForAutofill="no"
        android:autofillHints=""
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:inputType="textPersonName"
        tools:ignore="LabelFor" />
    <EditText
        android:id="@+id/apellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/escribe_tu_apellidos"
        android:backgroundTint="@color/purple_700"
        android:importantForAutofill="no"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:inputType="textPersonName"
        tools:ignore="LabelFor" />
    <EditText
        android:id="@+id/nombres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/escribe_tus_nombres"
        android:backgroundTint="@color/purple_700"
        android:importantForAutofill="no"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:autofillHints=""
        android:inputType="textPersonName"
        tools:ignore="LabelFor" />
    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:text="@string/guardar"/>

    <Button
        android:id="@+id/btnVerDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:text="@string/ver_listado_de_datos"/>





</LinearLayout>